--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "bulma": "^0.8.0"
+        "bulma": "^0.8.0",
+        "dropzone": "^5.5.1"
     }
 }
